def generate_uml():
    uml = """
@startuml
' Define classes
class Circuit {
  +name: str
  +buses: dict
  +resistors: dict
  +loads: dict
  +vsource: float
  +i: float
  +voltages: dict
  +add_bus(bus: str)
  +add_resistor_element(name: str, bus1: str, bus2: str, r: float)
  +add_load_element(name: str, bus1: str, p: float, v: float)
  +add_vsource_element(name: str, bus1: str, v: float)
  +set_i(i: float)
  +print_nodal_voltage()
  +print_circuit_current()
  +get_g_elements()
}

class Bus {
  +name: str
  +v: float
  +set_bus_v(bus_v: float)
}

class Resistor {
  +name: str
  +bus1: str
  +bus2: str
  +r: float
  +g : float
  +calc_g()
}

class Load {
  +name: str
  +bus1: str
  +p: float
  +v: float
  +r: float
  +g: float
  +calc_g()
}

class VSource {
  +name: str
  +bus1: str
  +v: float
}

class Solution {
   +circuit : Circuit
   +build_conductance_matrix()
   +do_power_flow()
}

' Class containment relationships (showing that Circuit contains other classes)
Circuit "1" *-- "many" Bus : contains
Circuit "1" *-- "many" Resistor : contains
Circuit "1" *-- "many" Load : contains
Circuit "1" *-- "many" VSource : contains
Solution  "1" *-- "1" Circuit : contains

@enduml
